[package]
name = "solar_system"
version = "1.0.0"
authors = ["Mike"]
edition = "2018"
publish = false

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", default-features = false, features = ["canvas", "async-std", "debug"], rev = "4808fcbd7eb29315e66c660a21a18aa6305739b6" }
iced_futures = { git = "https://github.com/hecrj/iced.git", features = ["async-std"], rev = "4808fcbd7eb29315e66c660a21a18aa6305739b6" }
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "4808fcbd7eb29315e66c660a21a18aa6305739b6" }
async-std = { version = "1.0", features = ["unstable"] }
rand = "0.7"